# Rustaceans

./: README.md
2025/hellorust/: .env.example  Cargo.toml
2025/hellorust/src/: main.rs
2025/hellorust/src/1/: 10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  1st.rs  2-1.rs  2.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  26.rs  27.rs  28.rs  29.rs  3.rs  30.rs  31.rs  32.rs  33.rs  34.rs  35.rs  36.rs  37.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs
2025/hellorust/src/game/: rust_beginner_lesson2.md  vending_machine.md  vending_machine.rs  자판기2.md  자판기_프로젝트_설명.md
2025/hirust/: .gitignore
